--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -119,6 +119,7 @@ ru:
 
   ed_subject:
     notice: "Предмет успешно создан"
+    notice2: "Предмет успешно удален"
     alert: 'Неверное значение'
     edit:
       subject: Предмет
@@ -127,6 +128,14 @@ ru:
       prepod: Преподаватель
       sub1: Создать
       sub2: Назад
+    delsub:
+      subject: Предмет
+      day: День
+      time: Время
+      sub1: Создать
+      sub2: Назад
+      sub3: Удалить
+      sub4: ПОЛНОСТЬЮ УДАЛИТЬ ПРЕДМЕТ
 
   creatinguser:
     notice: 'Аккаунт успешно зарегистрирован'
@@ -149,7 +158,8 @@ ru:
       sub1: 'Изменить'
       sub2: 'Удалить'
       sub3: 'Создать'
-      sub4: 'Изменить Предмет'
+      sub4: 'Cоздать Предмет'
+      sub5: 'Изменить Предмет'
       id: АЙДИ
       name: Имя
       email: Почта
